Fixed issue with button sizing, rows, and collapse divs being strange sizes

--- a/Client/static/assets/styles.css
+++ b/Client/static/assets/styles.css
@@ -110,7 +110,7 @@ ul li {
 }
 
 .but-col{
-	padding: 0;
+
 	padding-bottom: 15px;
 	
 }
